test(core): improve test coverage for core